# Eriscord

./: .gitignore  Cargo.toml  README.md
examples/: component-bot.rs  ping-bot.rs  testbot.rs
src/: client.rs  event.rs  gateway.rs  lib.rs  message.rs  parser.rs
tests/: test_parser.rs
