[package]
name = "eriscord"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.14.0", features = ["rustls-tls"] }
serde = { version = "1.0.124", features = ["derive"] }
futures = "0.3.15"
serde_json = "1.0.64"
async-trait = "0.1.50"

[dev-dependencies]
toml = "0.5.8"