[package]
name = "eriscord"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.124", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.15"
serde_json = "1.0.64"
async-trait = "0.1.50"
tokio-tungstenite = { version = "0.14.0", features = ["rustls-tls"] }

[dev-dependencies]
toml = "0.5.8"